--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>
 <head>
   <meta charset="UTF-8" />
-  <title>장민서 바보</title>
+  <title>물리 역학 시뮬레이션</title>
 </head>
 <body>
   <h1>물리 역학 시뮬레이션</h1>
